Cria a interação entre componentes importantes do quiz
Signed-off-by: Jeferson Melo <jeferosnmedeiros000@gmail.com>

--- a/react_app/src/css/MainContent.css
+++ b/react_app/src/css/MainContent.css
@@ -17,7 +17,7 @@
   overflow-y: auto;
   align-items: flex-start;
   justify-content: space-between;
-  padding: 5%;
+  padding: 10px;
   align-self: center;
 }
 
